--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "ISO8583 messaging tools (Wrap message & UnWrap message)",
   "main": "index.js",
   "dependencies": {
-    "big.js": "^5.2.2",
     "bignumber.js": "^8.1.1"
   },
   "devDependencies": {
-    "all-contributors-cli": "^6.6.1"
+    "all-contributors-cli": "^6.6.1",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
