--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mocha": "^6.1.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
